      of smooth-scrolling (easier to read).
    - Added virtual destructor to ListBoxBase.
    - Moved border size defines from window.h to amigawindow.h and made them
      consts.
    - Changed DYNAMIC_ARRAY_SIZE define in woopsiarray.h to a const.
    - Changed GLYPH_MAP_SIZE define in fontbase.h to a const.
    - Changed defines in glyphs.h to consts.

  - New Features:
    - Added makefile for demo - can now be built from command line.
    - Added Rect::splitIntersection().
    - Gadget rendering re-written to use damaged rects.
    - Added equality and inequality operator overloads to Rect class.
    - WoopsiArray accepts an initial reserved size parameter in its constructor.
    - FileRequester includes filename textbox.
    - Added FileRequester::getTextBoxFileName().

  V0.99.4 (20100902)
  
  - Fixes:
    - All makefiles no longer create .ds.gba and .sc.nds binaries.
    - Fonts include doxygen comments.
    - Amended return type of some font properties (Lakedaemon).
    - Reorganised PSD and BMP files.
    - Prevented demo build process from unnecessarily including BMP files.
    - Fixed divide by 0 when content size is 0 in SliderVertical and
      SliderHorizontal::resizeGrip().
    - SDL fixes.
    - GraphicsPort maps between co-ordinate systems more accurately; fixes
      clipping problems.
    - Various minor .NET tool improvements.
    - Python bmp2font script updated to match output of .NET tools.
  
  - New Features:
    - Built with devKitARM r31/libnds 1.4.5/default ARM7 0.5.14.
    - Setting MultiLineTextBox's max rows to -1 forces it to retain all text.
    - Added getCharTop() to font classes.
    - Added Gadget::checkCollision(Rect&).
    - Added drawBaselineText() to Graphics and GraphicsPort classes
     (Lakedaemon).
    - Added freetype outline font class (Lakedaemon).
    - Added Install.bat install script for Windows users.

  V0.99.3 (20100819)
  
  - Fixes:
    - WoopsiString::compareTo() no longer inlined (fixes SF bug 3017420).