@@ -43,18 +43,18 @@ typedef struct PAD {
  * Struct containing the length of time that each button has been held down.
  */
 typedef struct PadHeldTimeStruct {
-	u32 A;			/**< A button */
-	u32 B;			/**< B button */
-	u32 Select;		/**< Select button */
-	u32 Start;		/**< Start button */
-	u32 Right;		/**< Right button */
-	u32 Left;		/**< Left button */
-	u32 Up;			/**< Up button */
-	u32 Down;		/**< Down button */
-	u32 R;			/**< R button */
-	u32 L;			/**< L button */
-	u32 X;			/**< X button */
-	u32 Y;			/**< Y button */
+	s32 A;			/**< A button */
+	s32 B;			/**< B button */
+	s32 Select;		/**< Select button */
+	s32 Start;		/**< Start button */
+	s32 Right;		/**< Right button */
+	s32 Left;		/**< Left button */
+	s32 Up;			/**< Up button */
+	s32 Down;		/**< Down button */
+	s32 R;			/**< R button */
+	s32 L;			/**< L button */
+	s32 X;			/**< X button */
+	s32 Y;			/**< Y button */
 } PadHeldTime;
 
 /**
